# mgit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  sample accounts  setup.py
config/: default_config.yaml
docs/: INSTALLATION.md
src/: __init__.py  account_manager.py  cli.py  git_config_manager.py  profile_manager.py  ssh_manager.py  utils.py
tests/: test_account_manager.py  test_ssh_manager.py
web/: index.html  ui2.html  ui3.html  ui4.html
