[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgit"
version = "1.0.0"
description = "Manage multiple Git accounts on a single system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PrajsRamteke"}
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=12.0.0",
    "inquirer>=3.0.0",
    "requests>=2.28.0",
]

[project.scripts]
mgit = "mgit.cli:main"

[project.urls]
Homepage = "https://github.com/PrajsRamteke/mgit"
Issues = "https://github.com/PrajsRamteke/mgit/issues"

[tool.setuptools]
packages = ["mgit"]

[tool.setuptools.package-dir]
"mgit" = "src"